index.html this

--- a/index.html
+++ b/index.html
@@ -1,4 +1,39 @@
-<!DOCTYPE html><html lang="zh"><head><title>pageTitle</title><link rel="stylesheet" type="text/css" href="css/base.css"></head><body><h1>Jade - node template engine</h1><div id="container" class="col"><p>Get on it!</p><p>Jade is a terse and simple
-templating language with a
-strong focus on performance
-and powerful features.</p><div class="fe-flex-box"><div class="flex1">this is a</div><div class="flex2">this is b</div><div class="flex2">this is c</div></div></div><script data-main="js/main" src="js/require.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>阿尔法旅游网站</title>
+	<!-- style -->
+	<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/lib/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="css/pro.min.css">
+<body>
+<div class="full-screen">
+	<div class="index-bg" style="background-image:url(img/123.jpg);">
+	</div>
+	<div class="welcome-info">
+		<div class="afa-logo">
+			
+		</div>
+		<p class="text">
+			我们一直<b>在路上</b>
+		</p>
+	</div>
+</div>
+	<div class="container">
+		<div class="col-lg-3">this is my col</div>
+		<div class="col-lg-3">this is my col</div>
+		<div class="col-lg-3">this is my col</div>
+		<div class="col-lg-3">this is my col</div>
+	</div>
+	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+	<!--[if lte IE 9]>
+	<script type="text/javascript" src="js/lib/respond.min.js"></script>
+	<script type="text/javascript" src="js/lib/html5shiv.min.js"></script>
+	<![endif]-->
+</body>
+</html>
