--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<link rel="stylesheet" type="text/css" href="css/pro.min.css">
 <body>
-<div class="full-screen">
+<div id="first-screen" class="full-screen first-screen">
 	<div class="index-bg" style="background-image:url(img/123.jpg);">
 	</div>
 	<div class="welcome-info">
@@ -23,17 +23,95 @@
 		</p>
 	</div>
 </div>
-	<div class="container">
-		<div class="col-lg-3">this is my col</div>
-		<div class="col-lg-3">this is my col</div>
-		<div class="col-lg-3">this is my col</div>
-		<div class="col-lg-3">this is my col</div>
-	</div>
-	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+<div id="index" class="full-screen afa-index">
+		<div class="header">
+			<div class="container">
+					<div class="col-md-2">
+						<span class="afa-logo">
+						</span>
+					</div>
+					<div class="col-md-6">
+						<span class="img-nav-tab">
+							<a href="" class="nav-item"></a>
+							<a href="" class="nav-item"></a>
+							<a href="" class="nav-item"></a>
+							<a href="" class="nav-item"></a>
+							<a href="" class="nav-item"></a>
+						</span>
+					</div>
+					<div class="col-md-4 fe-tr">
+						<a href="">登录</a>&nbsp;&nbsp;
+						<a href="">注册</a>&nbsp;&nbsp;
+						<a href="" class="afa-center">
+							个人中心
+						</a>
+					</div>
+			</div>	
+		</div>
+		<div class="full-screen menu-nav">
+			<div class="index-bg blur" style="background:url(img/second.jpg) no-repeat center;"></div>
+			<div class="container">
+				<div class="slide-menu">
+					<span>
+						<ul>
+							<li><a href="">找路线</a></li>
+							<li><a href="">找路线</a></li>
+							<li><a href="">找路线</a></li>
+							<li><a href="">找路线</a></li>
+							<li><a href="">找路线</a></li>
+						</ul>
+					</span>
+				</div>
+				<div class="img-menu">
+					<ul>
+							<li class="img-item"><a href=" ">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+							<li class="img-item"><a href="">
+									<div class="cover"></div>
+								</a></li>
+						</ul>	
+				</div>
+			</div>	
+		</div>
+		</div>
+		<div class="footer">
+			<div class="container">
+			<div class="col-md-12">
+				<div class="col-md-8 copyright">
+					Copyright© 1999-2014, ctrip.com. All rights reserved. | ICP证：沪B2-20050130
+				</div>
+				<div class="col-md-4 friendlink">
+					<a href="">关于我们</a>&nbsp;|&nbsp;
+					<a href="">媒体报道</a>&nbsp;|&nbsp;
+					<a href="">合作查询</a>&nbsp;|&nbsp;
+					<a href="">友情连接</a>
+				</div>
+			</div>	
+			</div>
+		</div>
+</div>
+	<script type="text/javascript" src="js/lib/jquery.js"></script>
 	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 	<!--[if lte IE 9]>
 	<script type="text/javascript" src="js/lib/respond.min.js"></script>
 	<script type="text/javascript" src="js/lib/html5shiv.min.js"></script>
 	<![endif]-->
+	<script data-main="js/main" src="js/require.js"></script>
 </body>
 </html>
