--- a/index.html
+++ b/index.html
@@ -1,117 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta charset="UTF-8">
+	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>阿尔法旅游网站</title>
-	<!-- style -->
-	<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/lib/bootstrap-theme.min.css">
-	<link rel="stylesheet" type="text/css" href="css/global.css">
-	<link rel="stylesheet" type="text/css" href="css/pro.min.css">
-<body>
-<div id="first-screen" class="full-screen first-screen">
-	<div class="index-bg" style="background-image:url(img/123.jpg);">
-	</div>
-	<div class="welcome-info">
-		<div class="afa-logo">
-			
-		</div>
-		<p class="text">
-			我们一直<b>在路上</b>
-		</p>
-	</div>
-</div>
-<div id="index" class="full-screen afa-index">
-		<div class="header">
-			<div class="container">
-					<div class="col-md-2">
-						<span class="afa-logo">
-						</span>
-					</div>
-					<div class="col-md-6">
-						<span class="img-nav-tab">
-							<a href="" class="nav-item"></a>
-							<a href="" class="nav-item"></a>
-							<a href="" class="nav-item"></a>
-							<a href="" class="nav-item"></a>
-							<a href="" class="nav-item"></a>
-						</span>
-					</div>
-					<div class="col-md-4 fe-tr">
-						<a href="">登录</a>&nbsp;&nbsp;
-						<a href="">注册</a>&nbsp;&nbsp;
-						<a href="" class="afa-center">
+    <title>阿尔法旅游网站</title>
+    <!-- style -->
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/global.css">
+    <link rel="stylesheet" type="text/css" href="css/pro.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <body>
+        <div id="first-screen" class="full-screen first-screen">
+            <div class="index-bg" style="background-image:url(img/123.jpg);">
+            </div>
+            <div class="welcome-info">
+                <div class="afa-logo">
+                    <img src="img/icon/logo.png" alt="">
+                </div>
+                <p class="text">
+                    我们一直<b>在路上</b>
+                </p>
+            </div>
+        </div>
+        <div id="index" class="full-screen afa-index">
+            <div class="header">
+                <div class="box">
+                    <div class="slidebox">                       
+                       
+                    </div>
+                    <div class="contentbox"> 
+                        <span class="afa-logo">                   
+                            <a>
+                                <img src="img/icon/logo.png" alt="">
+                            </a>
+                        </span>
+                        <span class="img-nav-tab">
+                            <a href="" class="nav-item"></a>
+                            <a href="" class="nav-item active"></a>
+                            <a href="" class="nav-item"></a>
+                            <a href="" class="nav-item"></a>
+                            <a href="" class="nav-item"></a>
+                            <a href="" class="nav-item"></a>
+                            <a href="" class="nav-item"></a>
+                        </span>
+                    </div>
+                    <div class="slidebox fe-tr center-operate">
+                        <a href="">登录</a>&nbsp;|&nbsp;
+                        <a href="">注册</a>&nbsp;&nbsp;
+                        <a href="" class="afa-center">
 							个人中心
 						</a>
-					</div>
-			</div>	
-		</div>
-		<div class="full-screen menu-nav">
-			<div class="index-bg blur" style="background:url(img/second.jpg) no-repeat center;"></div>
-			<div class="container">
-				<div class="slide-menu">
-					<span>
-						<ul>
-							<li><a href="">找路线</a></li>
-							<li><a href="">找路线</a></li>
-							<li><a href="">找路线</a></li>
-							<li><a href="">找路线</a></li>
-							<li><a href="">找路线</a></li>
-						</ul>
-					</span>
-				</div>
-				<div class="img-menu">
-					<ul>
-							<li class="img-item"><a href=" ">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-							<li class="img-item"><a href="">
-									<div class="cover"></div>
-								</a></li>
-						</ul>	
-				</div>
-			</div>	
-		</div>
-		</div>
-		<div class="footer">
-			<div class="container">
-			<div class="col-md-12">
-				<div class="col-md-8 copyright">
-					Copyright© 1999-2014, ctrip.com. All rights reserved. | ICP证：沪B2-20050130
-				</div>
-				<div class="col-md-4 friendlink">
-					<a href="">关于我们</a>&nbsp;|&nbsp;
-					<a href="">媒体报道</a>&nbsp;|&nbsp;
-					<a href="">合作查询</a>&nbsp;|&nbsp;
-					<a href="">友情连接</a>
-				</div>
-			</div>	
-			</div>
-		</div>
-</div>
-	<script type="text/javascript" src="js/lib/jquery.js"></script>
-	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-	<!--[if lte IE 9]>
+                    </div>
+                </div>
+            </div>
+            <div class="full-screen menu-nav">
+                <div class="index-bg" style="background:url(img/second.jpg) no-repeat center;">
+                </div>
+                <div class="box">
+                    <div class="slidebox slide-menu">
+                        <ul class="btn-list">
+                            <li><a href="">找路线</a>
+                            </li>
+                            <li><a href="">找分享</a>
+                            </li>
+                            <li><a href="">找同伴</a>
+                            </li>
+                            <li><a href="">找领队</a>
+                            </li>
+                            <li><a href="">找装备</a>
+                            </li>
+                            <li><a href="">找知识</a>
+                            </li>
+                            <li><a href="">全程管家</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="contentbox img-menu">
+                        <ul>
+                            <li class="img-item"><a href=" "><b>徒步</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>骑行</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>钓鱼</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>自驾</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>攀岩</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>滑雪</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                            <li class="img-item"><a href=""><b>更多</b>
+									<img src="img/tu.jpg" alt=""><div class="cover"></div>
+								</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="slidebox">
+                    	<a href="">微信</a>
+                    	<a href="">新浪</a>
+                    </div>
+                </div>
+                <div class="footer fixed">
+                    <div class="container">
+                        <div class="col-md-12">
+                            <div class="col-md-8 copyright">
+                                Copyright© 1999-2014, ctrip.com. All rights reserved. | ICP证：沪B2-20050130
+                            </div>
+                            <div class="col-md-4 friendlink">
+                                <a href="">关于我们</a>&nbsp;|&nbsp;
+                                <a href="">媒体报道</a>&nbsp;|&nbsp;
+                                <a href="">合作查询</a>&nbsp;|&nbsp;
+                                <a href="">友情连接</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript" src="js/lib/jquery.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+        <!--[if lte IE 9]>
 	<script type="text/javascript" src="js/lib/respond.min.js"></script>
 	<script type="text/javascript" src="js/lib/html5shiv.min.js"></script>
 	<![endif]-->
-	<script data-main="js/main" src="js/require.js"></script>
-</body>
+        <script data-main="js/main" src="js/require.js"></script>
+    </body>
+
 </html>
