--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>阿尔法旅游网站</title>
     <!-- style -->
@@ -11,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/global.css">
     <link rel="stylesheet" type="text/css" href="css/pro.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+
     <body>
         <div id="first-screen" class="full-screen first-screen">
             <div class="index-bg" style="background-image:url(img/123.jpg);">
@@ -27,12 +29,11 @@
         <div id="index" class="full-screen afa-index">
             <div class="header">
                 <div class="box">
-                    <div class="slidebox">                       
-                       
+                    <div class="slidebox">
                     </div>
-                    <div class="contentbox"> 
-                        <span class="afa-logo">                   
-                            <a>
+                    <div class="contentbox">
+                        <span class="afa-logo w-p-absolute">
+                            <a href="javascript:void(0);">
                                 <img src="img/icon/logo.png" alt="">
                             </a>
                         </span>
@@ -47,11 +48,11 @@
                         </span>
                     </div>
                     <div class="slidebox fe-tr center-operate">
-                        <a href="">登录</a>&nbsp;|&nbsp;
-                        <a href="">注册</a>&nbsp;&nbsp;
-                        <a href="" class="afa-center">
-							个人中心
-						</a>
+                        <a href="page/login.html">登录</a>&nbsp;|&nbsp;
+                        <a href="page/register.html">注册</a>&nbsp;&nbsp;
+                        <a href="#" class="afa-center">
+                            个人中心
+                        </a>
                     </div>
                 </div>
             </div>
@@ -73,45 +74,52 @@
                             </li>
                             <li><a href="">找知识</a>
                             </li>
-                            <li><a href="">全程管家</a>
+                            <li><a href="page/manager.html">全程管家</a>
                             </li>
                         </ul>
                     </div>
                     <div class="contentbox img-menu">
-                        <ul>
-                            <li class="img-item"><a href=" "><b>徒步</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                        <ul id="img_menu_wrapper">
+                            <li class="img-item"><a href="javascript:void(0);"><b>徒步</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>骑行</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>骑行</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>钓鱼</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>钓鱼</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>自驾</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>自驾</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>攀岩</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>攀岩</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>滑雪</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>滑雪</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
-                            <li class="img-item"><a href=""><b>更多</b>
-									<img src="img/tu.jpg" alt=""><div class="cover"></div>
-								</a>
+                            <li class="img-item"><a href="javascript:void(0);"><b>更多</b>
+                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                </a>
                             </li>
                         </ul>
                     </div>
-                    <div class="slidebox">
-                    	<a href="">微信</a>
-                    	<a href="">新浪</a>
+                    <div class="slidebox fe-tc">
+                        <br>
+                        <br>
+                        <a class="icon icon-sina" href="">&nbsp;&nbsp;</a>
+                        <br>
+                        <br>
+                        <a class="icon icon-weixin" href="">&nbsp;&nbsp;</a>
+                        <br>
+                        <br>
+                        <a class="icon icon-qq" href="">&nbsp;&nbsp;</a>
                     </div>
                 </div>
                 <div class="footer fixed">
@@ -131,13 +139,13 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="js/lib/jquery.js"></script>
-        <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+        <script type="text/javascript" src="libs/jquery.js"></script>
+        <script type="text/javascript" src="libs/bootstrap.min.js"></script>
         <!--[if lte IE 9]>
-	<script type="text/javascript" src="js/lib/respond.min.js"></script>
-	<script type="text/javascript" src="js/lib/html5shiv.min.js"></script>
-	<![endif]-->
-        <script data-main="js/main" src="js/require.js"></script>
+    <script type="text/javascript" src="libs/respond.min.js"></script>
+    <script type="text/javascript" src="libs/html5shiv.min.js"></script>
+    <![endif]-->
+        <script data-main="js/index" src="js/require.js"></script>
     </body>
 
 </html>
