--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>阿尔法旅游网站</title>
     <!-- style -->
-    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/global.css">
-    <link rel="stylesheet" type="text/css" href="css/pro.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/global.css">
+    <link rel="stylesheet" type="text/css" href="./css/pro.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
 
     <body>
         <div id="first-screen" class="full-screen first-screen">
@@ -72,13 +72,13 @@
                             </li>
                             <li><a href="">找装备</a>
                             </li>
-                            <li><a href="">找知识</a>
+                            <li><a href="./page/knowledge.html">找知识</a>
                             </li>
-                            <li><a href="page/manager.html">全程管家</a>
+                            <li><a href="./page/manager.html">全程管家</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="contentbox img-menu">
+                    <div class="contentbox img-menu afa-index">
                         <ul id="img_menu_wrapper">
                             <li class="img-item"><a href="javascript:void(0);"><b>徒步</b>
                                     <img src="img/tu.jpg" alt=""><div class="cover"></div>
@@ -139,13 +139,13 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="libs/jquery.js"></script>
-        <script type="text/javascript" src="libs/bootstrap.min.js"></script>
+        <script type="text/javascript" src="./js/libs/jquery.js"></script>
+        <script type="text/javascript" src="./js/libs/bootstrap.min.js"></script>
         <!--[if lte IE 9]>
-    <script type="text/javascript" src="libs/respond.min.js"></script>
-    <script type="text/javascript" src="libs/html5shiv.min.js"></script>
+    <script type="text/javascript" src="./js/libs/respond.min.js"></script>
+    <script type="text/javascript" src="./js/libs/html5shiv.min.js"></script>
     <![endif]-->
-        <script data-main="js/index" src="js/require.js"></script>
+        <script data-main="./js/index.js" src="./js/require.js"></script>
     </body>
 
 </html>
