--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </li>
                             <li><a href="">找领队</a>
                             </li>
-                            <li><a href="">找装备</a>
+                            <li><a href="./page/equipment.html">找装备</a>
                             </li>
                             <li><a href="./page/knowledge.html">找知识</a>
                             </li>
