--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>阿尔法旅游网站</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" media="screen" />
     <!-- style -->
     <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap-theme.min.css">
@@ -27,7 +28,7 @@
             </div>
         </div>
         <div id="index" class="full-screen afa-index">
-            <div class="header">
+            <div class="header fixed">
                 <div class="box">
                     <div class="slidebox">
                     </div>
@@ -57,9 +58,9 @@
                 </div>
             </div>
             <div class="full-screen menu-nav">
-                <div class="index-bg" style="background:url(img/second.jpg) no-repeat center;">
+                <div class="index-bg blur" style="background:url(img/second.jpg) no-repeat center;">
                 </div>
-                <div class="box">
+                <div class="box main">
                     <div class="slidebox slide-menu">
                         <ul class="btn-list">
                             <li><a href="">找路线</a>
@@ -68,7 +69,7 @@
                             </li>
                             <li><a href="">找同伴</a>
                             </li>
-                            <li><a href="">找领队</a>
+                            <li><a href="./page/team.html">找领队</a>
                             </li>
                             <li><a href="./page/equipment.html">找装备</a>
                             </li>
