--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="welcome-info">
                 <div class="afa-logo">
-                    <img src="img/icon/logo.png" alt="">
+                    <img src="img/logo.png" alt="阿尔法 logo">
                 </div>
                 <p class="text">
                     我们一直<b>在路上</b>
@@ -28,114 +28,51 @@
             </div>
         </div>
         <div id="index" class="full-screen afa-index">
-            <div class="header fixed">
-                <div class="box">
-                    <div class="slidebox">
-                    </div>
-                    <div class="contentbox">
-                        <span class="afa-logo w-p-absolute">
-                            <a href="javascript:void(0);">
-                                <img src="img/icon/logo.png" alt="">
-                            </a>
-                        </span>
-                        <span class="img-nav-tab">
-                            <a href="" class="nav-item"></a>
-                            <a href="" class="nav-item active"></a>
-                            <a href="" class="nav-item"></a>
-                            <a href="" class="nav-item"></a>
-                            <a href="" class="nav-item"></a>
-                            <a href="" class="nav-item"></a>
-                            <a href="" class="nav-item"></a>
-                        </span>
-                    </div>
-                    <div class="slidebox fe-tr center-operate">
-                        <a href="page/login.html">登录</a>&nbsp;|&nbsp;
-                        <a href="page/register.html">注册</a>&nbsp;&nbsp;
-                        <a href="#" class="afa-center">
-                            个人中心
-                        </a>
-                    </div>
-                </div>
+            <div class="afa-logo index">
+                <a href="javascript:void(0);">
+                    <img src="img/icon/logo.png" alt="">
+                </a>
             </div>
             <div class="full-screen menu-nav">
-                <div class="index-bg blur" style="background:url(img/second.jpg) no-repeat center;">
+                <div class="full-bg" style="background:url(img/abc.jpg) no-repeat center;">
+                    <div class="full-bg opacity-8"></div>
                 </div>
                 <div class="box main">
-                    <div class="slidebox slide-menu">
-                        <ul class="btn-list">
-                            <li><a href="">找路线</a>
-                            </li>
-                            <li><a href="">找分享</a>
-                            </li>
-                            <li><a href="">找同伴</a>
-                            </li>
-                            <li><a href="./page/team.html">找领队</a>
-                            </li>
-                            <li><a href="./page/equipment.html">找装备</a>
-                            </li>
-                            <li><a href="./page/knowledge.html">找知识</a>
-                            </li>
-                            <li><a href="./page/manager.html">全程管家</a>
-                            </li>
-                        </ul>
+                    <div class="slidebox">
                     </div>
                     <div class="contentbox img-menu afa-index">
                         <ul id="img_menu_wrapper">
                             <li class="img-item"><a href="javascript:void(0);"><b>徒步</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>骑行</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>钓鱼</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>自驾</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>攀岩</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>滑雪</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                             <li class="img-item"><a href="javascript:void(0);"><b>更多</b>
-                                    <img src="img/tu.jpg" alt=""><div class="cover"></div>
+                                    <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <div class="slidebox fe-tc">
-                        <br>
-                        <br>
-                        <a class="icon icon-sina" href="">&nbsp;&nbsp;</a>
-                        <br>
-                        <br>
-                        <a class="icon icon-weixin" href="">&nbsp;&nbsp;</a>
-                        <br>
-                        <br>
-                        <a class="icon icon-qq" href="">&nbsp;&nbsp;</a>
-                    </div>
-                </div>
-                <div class="footer fixed">
-                    <div class="container">
-                        <div class="col-md-12">
-                            <div class="col-md-8 copyright">
-                                Copyright© 1999-2014, ctrip.com. All rights reserved. | ICP证：沪B2-20050130
-                            </div>
-                            <div class="col-md-4 friendlink">
-                                <a href="">关于我们</a>&nbsp;|&nbsp;
-                                <a href="">媒体报道</a>&nbsp;|&nbsp;
-                                <a href="">合作查询</a>&nbsp;|&nbsp;
-                                <a href="">友情连接</a>
-                            </div>
-                        </div>
+                    <div class="slidebox">
                     </div>
                 </div>
             </div>
