index.html update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="index" class="full-screen afa-index">
             <div class="afa-logo index">
                 <a href="javascript:void(0);">
-                    <img src="img/icon/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </a>
             </div>
             <div class="full-screen menu-nav">
@@ -42,31 +42,98 @@
                     </div>
                     <div class="contentbox img-menu afa-index">
                         <ul id="img_menu_wrapper">
-                            <li class="img-item"><a href="javascript:void(0);"><b>徒步</b>
+                            <li class="img-item bl">
+                                <a href="javascript:void(0);">
+                                    <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            徒步
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
+
+                                    <img src="" alt="">
+                                    <div class="cover"></div>
+                                </a>
+                            </li>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            骑行
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>骑行</b>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            钓鱼
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>钓鱼</b>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            自驾
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>自驾</b>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            攀岩
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>攀岩</b>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            滑雪
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>滑雪</b>
-                                    <img src="" alt=""><div class="cover"></div>
-                                </a>
-                            </li>
-                            <li class="img-item"><a href="javascript:void(0);"><b>更多</b>
+                            <li class="img-item"><a href="javascript:void(0);"> <div class="title">
+                                        <h2>
+                                            <b>HIKING</b>
+                                            <br>
+                                            更多
+                                        </h2>
+                                        <span class="text">
+                                            徒步旅行，去自己想去的地方
+                                        </span>
+                                    </div>
                                     <img src="" alt=""><div class="cover"></div>
                                 </a>
                             </li>
