--- a/index.html
+++ b/index.html
@@ -28,37 +28,37 @@
           <div class="slidebox"></div>
           <div class="contentbox img-menu afa-index">
             <ul id="img_menu_wrapper">
-              <li class="img-item bl"><a href="view/afa_index.html" target="_blank">
+              <li class="img-item bl"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
                   <div class="cover"></div></a></li>
-              <li class="img-item"><a href="view/afa-index.html" target="_blank">
+              <li class="img-item"><a href="view/afa_index.html">
                   <div class="title">
                     <h2><b>HIKING</b><br>徒步</h2><span class="text">徒步旅行，去自己想去的地方</span>
                   </div><img src="img/index_default.jpg" alt="">
